gts-macros/tests/compile_fail/two_schema_id_fields.stderr
error[E0599]: no function or associated item named `new_instance_with_defaults` found for struct `TwoSchemaIdBaseV1<M>` in the current scope
  --> tests/compile_fail/two_schema_id_fields.rs:27:38
   |
16 | pub struct TwoSchemaIdBaseV1<M> {
   | ------------------------------- function or associated item `new_instance_with_defaults` not found for this struct
...
27 |     let _ = TwoSchemaIdBaseV1::<()>::new_instance_with_defaults();
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item not found in `TwoSchemaIdBaseV1<()>`
